01-강의준비/06-senario/03-kustomize+helm/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kustomize-helm-guestbook
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
