01-강의준비/06-senario/03-kustomize+helm/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kustomize-helm-guestbook
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB의 Scheme을 지정합니다. (internet-facing 또는 internal)
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kustomize-helm-guestbook
                port:
                  name: http
